--- a/Upyourcloud/app/src/main/res/values/strings.xml
+++ b/Upyourcloud/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_home">Home</string>
+    <string name="title_activity_backup">Backup</string>
+    <string name="title_activity_my_devices">MyDevices</string>
+    <string name="title_activity_share">Share</string>
+    <string name="title_activity_my_drive">MyDrive</string>
+    <string name="title_activity_updates">Updates</string>
 </resources>
